# django-relativedelta

./: .editorconfig  .env.example  .envrc.example  CONTRIBUTING.md  Makefile  pyproject.toml  setup.cfg  setup.py  tox.ini
relativedeltafield/: __init__.py  fields.py  forms.py  utils.py
src/relativedeltafield/: __init__.py  fields.py  utils.py
testproject/testproject/: admin.py  settings.py
tests/: .coveragerc  test_iso8601relativedelta.py  test_relativedeltafield.py
tests/demo/demoproject/: backends.py  settings.py  urls.py
tests/demo/demoproject/testapp/: __init__.py  admin.py  apps.py  models.py
tests/demo/demoproject/testapp/migrations/: 0001_initial.py
tests/testapp_/: models.py
tests/testproject/testproject/: manage.py  settings.py  wsgi.py
tests/testproject/testproject/testapp/: __init__.py  admin.py  apps.py  models.py
tests/testproject/testproject/testapp/migrations/: 0001_initial.py
